test/libsolidity/syntaxTests/natspec/docstring_empty_description.sol
contract C {
    /// @param id
    function vote(uint id) public;
}
// ----
// DocstringParsingError: No description given for param id
// TypeError: (0-67): Contract "C" should be marked as abstract.
